<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btncode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="151dp"
        android:text="@string/btncode" />

    <TextView
        android:id="@+id/txtCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btncode"
        android:layout_alignRight="@+id/code"
        android:layout_marginBottom="104dp"
        android:text="@string/txtCode"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btncode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/hit"
        android:inputType="number" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/txtVerify"
        android:textColor="#FF0000"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
