<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/editlblname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittxtname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/editlblname"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/editlblPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtname"
        android:text="@string/editPlace"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittxtPlace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtname"
        android:layout_toRightOf="@+id/editlblPlace"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/editlblDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtPlace"
        android:text="@string/editlblDOB"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittxtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtPlace"
        android:layout_toRightOf="@+id/editlblDOB"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/editlblDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtDate"
        android:text="@string/editlblDistrict"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittxtDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtDate"
        android:layout_toRightOf="@+id/editlblDistrict"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/editlblPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtDistrict"
        android:text="@string/editlblPrimary"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittxtPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtDistrict"
        android:layout_toRightOf="@+id/editlblPrimary"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/editlblFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtPrimary"
        android:text="@string/editlblFrom"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittxtFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtPrimary"
        android:layout_toRightOf="@+id/editlblFrom"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/editlblPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittxtFrom"
        android:text="@string/editlblPic"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/editimageButton"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_below="@+id/edittxtFrom"
        android:layout_toRightOf="@+id/editlblPic"
        android:src="@drawable/img1" />

    <Button
        android:id="@+id/editbtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editimageButton"
        android:text="@string/editSave"
        android:textSize="24sp" />

</RelativeLayout>